# kimpanel-dde

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  asdf  dbus.md  dtk.md  pr1-inline-comments.txt
qml/: Main.qml
src/: KimpanelAdaptor.cpp  KimpanelAdaptor.h  KimpanelInputmethodWatcher.cpp  KimpanelInputmethodWatcher.h  PanelWindow.cpp  PanelWindow.h  SystemTrayController.cpp  SystemTrayController.h  main.cpp
